# focal

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.example.json  config.example.sh  focal.py  install.sh  pyproject.toml  ruff.toml  setup.sh  sync.sh
.github/workflows/: ci.yml  docker-publish.yml  publish.yml  release.yml
docker/: Dockerfile  Dockerfile.test
docs/: build-log.md  epics.md  pm-guide.md  retro-log.md  testing-guide.md  user-guide.md  why-focal.md
docs/focal/: build-log.json  epics.md  iteration-planning.md
docs/test-runs/: 2026-06-08.md  HOW-TO-RUN.md
focal/: _cli.py  config.py  gh.py  log.py  mcp_server.py  notify.py  state.py  sync.py  wizard.py
focal/pm/: adopt_cmd.py  adopt_plan_cmd.py  breakdown_parser.py  design_cmd.py  epic_cmd.py  epics_renderer.py  hierarchy_resolver.py  init_cmd.py  iteration_parser.py  plan_cmd.py  plan_doc_parser.py  plan_helpers.py  pm_state.py  retro_cmd.py  solo_cmd.py  sp_extractor.py  status_cmd.py  story_cmd.py  sync_state_cmd.py  templates.py  triage_cmd.py  velocity_cmd.py  whatif_cmd.py
focal/templates/: iteration-planning.md  plan.md
launchd/: com.your-username.focal-cache.plist  com.your-username.focal.plist  com.your-username.sync-gh-board.plist
templates/: epics.md  retro-log.md
templates/ISSUE_TEMPLATE/: epic.md
tests/: test_breakdown_parser.py  test_design_cmd.py  test_hierarchy_resolver.py  test_mcp_server.py  test_sp_extractor.py  test_state.py  test_status_cmd.py  test_sync.py  test_velocity.py  test_whatif_cmd.py  test_wizard.py
(+8 files in other folders)
