[build-system]
requires = ["setuptools>=61", "setuptools-scm>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "focal-cli"
dynamic = ["version"]
description = "Personal command center for GitHub — one Kanban board that stays in sync with every project you contribute to, plus a full project management CLI."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Lenin Mehedy", email = "lenin.mehedy@hashgraph.com" }]
requires-python = ">=3.10"
keywords = ["github", "projects", "kanban", "project-management", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["typer>=0.12", "rich>=13"]

[project.scripts]
focal = "focal._cli:app"

[project.urls]
Homepage = "https://github.com/leninmehedy/focal"
Repository = "https://github.com/leninmehedy/focal"
Issues = "https://github.com/leninmehedy/focal/issues"

[tool.setuptools.packages.find]
include = ["focal*"]

[tool.setuptools.package-data]
focal = ["templates/**/*"]

[tool.setuptools_scm]
# version derived from git tags (e.g. v2.1.0 → 2.1.0)

[tool.ruff]
line-length = 100
target-version = "py310"
